# gtk-g-rays2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  autogen.sh  configure.ac  meson.build
data/: Makefile.am  Makefile.in  gtk-g-rays2.desktop  gtk-g-rays2.ui  meson.build  org.maemo.gtk_g_rays2.service
docs/: 90-mm-g-rays2-blacklist.rules  91-mm-g-rays2-blacklist.rules  Makefile  README  about.html  about.page  gpsbabel-fd0_as_serial.patch  gtkgrays2.html  gtkgrays2.page  index.page  meson.build  readme.beating-the-bluez  wbt201.defaults.txt
meson/: post_install.sh
po/: ChangeLog  Makevars  POTFILES  POTFILES.in  POTFILES.skip  en.po  gtk-g-rays2.pot  meson.build
src/: Makefile.am  Makefile.in  Makefile.test  babel_spawn.c  bbmain.c  blen  blen.c  bluebus.h  bluebus.h.od  bluecon.c  bluecon.c.old  bmain.c  bmain_sock.c  bmain_spawn.c  bmtest.c  btest.sh  cairo_draw.c  g-rays2-rfcomm.sh  gdtest.c  grays_marshal.c  grays_marshal.h  gstest  gstest.c  meson.build  messages.c  misc.c  serial.c  sigtest.c  uihandler.c  version.h.in  wbt201.c  wbt201.h
src/old/: bluebus.h  bluecon.c  bluecon.vala
tools/g-rays2-cmd/: Makefile  README.md  g-rays2-cmd.c
tools/go-wbt/: README.md  btaddr_other.go  build.ninja  go.mod  gpxgen.go  wbt201.go
