
dhelp = ['about.page', 'grays0.png', 'grays1.png', 'grays2.png', 'grays3.png', 'grays4.png',
	'grays99.png', 'grays-files1.png', 'grays-files.png', 'index.page']

dtext = ['readme.beating-the-bluez','90-mm-g-rays2-blacklist.rules',
	 '91-mm-g-rays2-blacklist.rules', 'wbt201.defaults.txt']

install_data(dhelp,
	     install_dir: join_paths(get_option('datadir'), 'help', 'C', 'gtk-g-rays2')
	    )

install_data(dtext,
	     install_dir: join_paths(get_option('datadir'), 'doc', 'gtk-g-rays2')
	    )
